@@ -1,3 +1,11 @@
+2006-08-30  Theppitak Karoonboonyanan  <thep@linux.thai.net>
+
+	* src/thbrk/thbrk.c (brk_do): (Optimization) When successfully
+	recovered, stop walking immediately, increasing chance to be
+	superseded earlier by better candidate. Also removed unnecessary check 
+	for str_pos < len, because it's guaranteed by brk_recover() when return
+	value is not -1.
+
 2006-08-29  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thbrk/thbrk.c (+brk_pool_allocator_use,
@@ -1033,13 +1041,13 @@
 	* Makefile.am (1.2), configure.in (1.2), include/Makefile.am (1.2,
 	r0_1_1, r0_1_0), include/thai/Makefile.am (1.2), src/Makefile.am
 	(1.2), src/thcoll/Makefile.am (1.2, r0_1_1, r0_1_0),
-	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.12 2006-08-29 16:19:14 thep Exp $
+	tests/Makefile.am (1.2): Add $Id: ChangeLog,v 1.98.2.13 2006-08-30 05:56:10 thep Exp $
 
 2001-06-12 Tuesday 20:14  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
 	* src/thcoll/cweight.c (1.2, r0_1_0), src/thcoll/cweight.h (1.2,
 	r0_1_0), src/thcoll/thcoll.c (1.2), tests/test-thcoll.sh (1.2,
-	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.12 2006-08-29 16:19:14 thep Exp $
+	r0_1_1, r0_1_0), tests/thsort.c (1.2, r0_1_1, r0_1_0): Add $Id: ChangeLog,v 1.98.2.13 2006-08-30 05:56:10 thep Exp $
 
 2001-06-12 Tuesday 20:12  Theppitak Karoonboonyanan  <thep@linux.thai.net>
 
